# BCGX-Data-Scientist

./: .gitignore  README.md  READMEBCG.md  powerco_eda-3.ipynb  powerco_feature_engineering-4.ipynb  powerco_random_forest_model-5.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modelling.ipynb
src/: __init__.py  calibration.py  data_loading.py  evaluation.py  features.py  model.py  survival.py  time_split.py  uncertainty.py
tests/: conftest.py  test_calibration.py  test_data_loading.py  test_evaluation.py  test_features.py  test_model.py  test_survival.py  test_time_split.py  test_uncertainty.py
